Fix JDK8 build errors